--- a/locale_ja_JP.properties
+++ b/locale_ja_JP.properties
@@ -554,6 +554,8 @@ Combat.ArrowDeflect=[[WHITE]]**\u77e2\u3092\u305d\u3089\u3057\u305f**
 Combat.BeastLore=[[GREEN]]**\u30d3\u30fc\u30b9\u30c8\u30ed\u30a2**
 Combat.BeastLoreHealth=[[DARK_AQUA]]\u4f53\u529b ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Combat.BeastLoreOwner=[[DARK_AQUA]]\u6240\u6709\u8005 ([[RED]]{0}[[DARK_AQUA]])
+Combat.BeastLoreHorseSpeed=[[DARK_AQUA]]\u99ac\u306e\u79fb\u52d5\u901f ([[GREEN]]{0} \u30d6\u30ed\u30c3\u30af/\u79d2[[DARK_AQUA]])
+Combat.BeastLoreHorseJumpStrength=[[DARK_AQUA]]\u99ac\u306e\u30b8\u30e3\u30f3\u30d7\u529b ([[GREEN]]\u6700\u5927 {0} \u30d6\u30ed\u30c3\u30af[[DARK_AQUA]])
 Combat.Gore=[[GREEN]]**\u6d41\u8840**
 Combat.StruckByGore=**\u6d41\u8840\u3057\u3066\u3044\u307e\u3059**
 Combat.TargetDazed=\u30bf\u30fc\u30b2\u30c3\u30c8\u306f[[DARK_RED]]\u5e7b\u60d1[[[RESET]]\u3060\u3063\u305f
@@ -985,6 +987,7 @@ Skills.NeedMore.Extra=[[DARK_RED]]\u3082\u3063\u3068[[GRAY]]{0}{1}[[DARK_RED]]\u
 Skills.Parents= PARENTS
 Skills.Stats={0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.ChildStats={0}[[GREEN]]{1}
+Skills.MaxXP=\u6700\u5927
 Skills.TooTired=\u305d\u306e\u30a2\u30d3\u30ea\u30c6\u30a3\u3092\u518d\u3073\u4f7f\u3046\u306e\u306b\u306f\u98fd\u304d\u904e\u304e\u3066\u3044\u307e\u3059\u3002 [[YELLOW]]({0}\u79d2)
 Skills.Cancelled=[[GOLD]]{0} [[RED]]\u30ad\u30e3\u30f3\u30bb\u30eb\uff01
 Skills.ConfirmOrCancel=[[GREEN]]\u3082\u3046\u4e00\u5ea6\u53f3\u30af\u30ea\u30c3\u30af\u3057\u3066[[GOLD]]{0}[[GREEN]]\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002 \u30ad\u30e3\u30f3\u30bb\u30eb\u3059\u308b\u306b\u306f\u5de6\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
